[tool.poetry]
name = "poetry_check_b"
version = "0.2.0"
description = "scripts"
authors = [
    "Alexander Belikov <abelikov@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7.1"


[tool.poetry.dev-dependencies]
poetry-check-a = {git = "https://github.com/alexander-belikov/poetry_check_a.git", rev = "main", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
